fix: align volume slider

--- a/src/styles.css
+++ b/src/styles.css
@@ -256,7 +256,7 @@
 .fideo__volume {
   position: absolute;
   bottom: calc(100% + 24px);
-  left: 50%;
+  left: calc(50% + 2px);
   width: 76px;
   height: 24px;
   opacity: 0;
